[package]
name = "scm"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
hex = "0.4"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.100"
dirs = "5.0"

